allprojects {
    apply plugin: 'java'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url 'https://jitpack.io'
        }
    }
	 gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xmaxerrs" << "4000"
        }
    }
}

subprojects {
    group = 'org.megamek'
    version = '0.48.0'
}

ext {
    mmGitRoot = 'https://github.com/MegaMek/megamek.git'
    mmlGitRoot = 'https://github.com/MegaMek/megameklab.git'
    mhqGitRoot = 'https://github.com/MegaMek/mekhq.git'
    // Work on MML or MHQ sometimes requires changes in MM as well. The maven publishing tasks use
    // these properties to append the branch name to the artifact id if the repo is not in the master
    // branch, making it available separately to the child project.
    // mhqBranch = grgit.branch.current().name
    mhqBranch = 'v0.48.0'
    mhqBranchTag = mhqBranch.equals('master') ? '' : '-' + mhqBranch

    // Allows setting a dependency on a different MM branch.
    mmBranch = 'v0.48.0'
    mmBranchTag = mmBranch.equals('master') ? '' : '-' + mmBranch
    mmlBranch = 'v0.48.0'
    mmlBranchTag = mmlBranch.equals('master') ? '' : '-' + mmlBranch
    mhqBranch = 'v0.48.0'
    mhqBranchTag = mhqBranch.equals('master') ? '' : '-' + mhqBranch

    mmDir = "${rootDir}/../megamek"
    mmlDir = "${rootDir}/../megameklab"
    mhqDir = "${rootDir}/../mekhq"
}

// A properties_local.gradle file can be used to override any of the above options. For instance,
// rootProject.ext.hqGitRoot = 'file:///path/to/local/repo' will cause the release target to clone a
// local copy of the repository rather than downloading it.

def localProperties = file('properties_local.gradle')
if (localProperties.exists()) {
    apply from: localProperties
}
